--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
   - repo: local
     hooks:
       - id: check-line-width
-        name: Check line width ≤78
-        entry: python3 rules/max_line_width.py 78
+        name: Check line width <= 80
+        entry: python3 rules/max_line_width.py 80
         language: system
         files: \.(txt|cpp|cc|h|hpp)$  # text, source, headers
